--- a/rating.kv
+++ b/rating.kv
@@ -1,5 +1,3 @@
-
-
 <WelcomeScreen>:
     BoxLayout:
         orientation: 'vertical'
@@ -223,9 +221,27 @@
         VideoPlayer:
             size_hint_y: .65
             id: video_player
+            source: ''
+            state: 'stop'
+            options: {'eos': 'loop'}
+            allow_stretch: True
         Label:
             id: info_label
             size_hint_y: .05
+
+        BoxLayout:
+            size_hint_y: 0.1
+            Button:
+                font_size: root.height/40
+                size_hint_x: .5
+                text: 'Previous Action'
+                on_release: root.previous_video(self)
+            ToggleButton:
+                id: btn_notrec
+                font_size: root.height/40
+                size_hint_x: 1.5
+                text: 'Action not recognized'
+                on_state: root.action_not_recognized = (self.state == 'down')
 
         ########### Abfrage Kreativität ###########
         BoxLayout:
@@ -460,18 +476,13 @@
             size_hint_y: 0.15
             Button:
                 font_size: root.height/40
-                size_hint_x: .25
+                size_hint_x: .5
                 text: 'Back to User data'
                 on_release: app.root.current = 'questionnaire'
             Button:
-                font_size: root.height/40
-                size_hint_x: .25
-                text: 'Previous Action'
-                on_release: root.previous_video(self)
-            Button:
                 id: submit_button
                 font_size: root.height/40
-                size_hint_x: .5
+                size_hint_x: 1.5
                 text: 'Submit Rating'
                 disabled: root.current_rating is None
                 opacity: 1 if not self.disabled else .5
