add ReadMe for future users

--- a/rating.kv
+++ b/rating.kv
@@ -244,7 +244,7 @@
                 text: 'Action not recognized'
                 on_state: root.action_not_recognized = (self.state == 'down')
 
-        ########### Abfrage Kreativität ###########
+        ########### Creativity Rating ###########
         BoxLayout:
             canvas.before:
                 Color:
@@ -321,7 +321,7 @@
                 Label:
                     text: 'very creative'
 
-        ########## Abfrage technical correctness #########
+        ########## Technical Correctness Rating ##########
         BoxLayout:
             canvas.before:
                 Color:
@@ -397,7 +397,7 @@
                 Label:
                     text: 'very high'
 
-        ########## Abfrage aesthetic appeal ##########
+        ########## Aesthetic Appeal Rating ##########
         BoxLayout:
             canvas.before:
                 Color:
